# DiffFCM

./: CMakeLists.txt
Diff-FCM/: CMakeLists.txt
Diff-FCM/basis/: CMakeLists.txt
Diff-FCM/basis/benchmark/: BsplineBench.cpp  CMakeLists.txt  GaussLegendreIntegrateBench.cpp  LegendreBasisBench.cpp  LegendrePolynomialsBench.cpp
Diff-FCM/basis/bindings/: BSplineBinding.cpp  CMakeLists.txt  GaussLegendreQuadratureRule.cpp  LegendreBasis.cpp  LegendrePolynomials.cpp
Diff-FCM/basis/src/: CMakeLists.txt
Diff-FCM/basis/src/basis/: Bspline.h  GaussLegendreQuadratureRule.h  LegendreBasis.h  LegendrePolynomials.h
Diff-FCM/basis/test/: BsplineBasisTest.cpp  BsplineTest.cpp  CMakeLists.txt  LegendreBasisTest.cpp  LegendrePolynomialsTest.cpp
Diff-FCM/mesh/bindings/: BSpline1DFit.cpp  BSpline2DFit.cpp  CMakeLists.txt  MeshPython.cpp
Diff-FCM/mesh/src/: CMakeLists.txt
Diff-FCM/mesh/src/mesh/: Cell.h  CellIndex.h  Coord.h  DOF.h  EdgeIndex.h  FaceIndex.h  Grid.cpp  Grid.h  NodeIndex.h  SparseMatrix.h
Diff-FCM/mesh/test/: BSplineFitTest.cpp  CMakeLists.txt  MeshStorageTest.cpp  MeshTest.cpp  SparseMatrixTest.cpp
Diff-FCM/types/bindings/: CMakeLists.txt  simd.cpp
Diff-FCM/types/src/: CMakeLists.txt
Diff-FCM/types/src/types/: simd.h
Diff-FCM/types/test/: CMakeLists.txt
tests/: bSplineFit.py  integrate.py  testBasis.py  testBspline.py  testTypes.py  test_BSplineFit2D.py
